Task-PostApiForJobCreation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
    spec:
      containers:
      - name: go-server
        image: numcys/go-job-server:2.0
        ports:
        - containerPort: 8080
      serviceAccountName: go-server-service-account
