Task-PostApiForJobCreation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-server-service
spec:
  selector:
    app: go-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
