Task-PostApiForJobCreation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-server-ingress
spec:
  rules:
  - host: naman.training.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-server-service
            port:
              number: 80
